--- a/client/src/components/Login/Signup.module.css
+++ b/client/src/components/Login/Signup.module.css
@@ -8,8 +8,10 @@
 .container{
     height: 90vh;
     margin: 100px;
-    border: 2px solid black;
-    border-radius: 30px;
+    margin-bottom: 10%;
+}
+.heading1{
+    margin: 0%;
 }
 .heading2{
     display: flex;
@@ -19,11 +21,18 @@
     color: var(--green);
 }
 .form{
+    border: 2px solid black;
+    border-radius: 30px;
+    padding: 30px;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    margin: 0 auto;
+}
+
+.boox{
     display: grid;
     grid-template-columns: 50% 50%;
-    padding: 60px;
-    margin-top: 0%;
-    margin: 0 auto;
+
 }
 
 .inputbox
@@ -40,7 +49,9 @@
     font-size: 20px;
     margin: 9px 0;
     border: none;
+    border-radius: 0%;
     border-bottom: 2px solid#000;
+    background-color: transparent;
     outline: none;
     resize: none;
 }
@@ -66,13 +77,12 @@
 }
 button[type="submit"]
 {
-    width: 100px;
+    width: 50%;
     background: var(--green);
     border-radius: 30px;
     color: #fff;
     border: none;
     cursor: pointer;
-    margin-top: 25px;
     padding: 10px;
     font-size: 18px;
     transition: .3s ease background-color;
@@ -91,36 +101,33 @@ button[type="submit"]:hover
 .radioheading{
     margin-left: 2%;
     font-size: 20px;
+    
+    padding: 0%;
     margin-bottom: 2%;
 }
 .radiocover{
     display: flex;
     width: 100%;
     margin: 0%;
+    padding: 0%;
 }
 .radiocover1{
     display: flex;
-    border: 2px solid black;
-    padding: 10px ;
-    border-radius: 30px;
     width: 20%;
     font-size: 15px;
 }
-.option{
-    padding-left: 10%;
-    padding-right: 10px;
-}
+
 .radiocover2{
     display: flex;
     margin-left: 2%;
-    border: 2px solid black;
-    border-radius: 30px;
-    padding: 10px;
+    /* padding: 10px; */
     width: 20%;
-    font-size: 15px;
 }
 
 
+.option{
+    font-size: 20px;
+}
 
   /* end radio */
 
@@ -129,14 +136,15 @@ button[type="submit"]:hover
     flex-direction: column;
     margin-top: 20px;
     position: relative;
-    left: 15%;
 }
 .dobheading{
     font-size: 20px;
+    margin-bottom: 0%;
 }
 .dobinput{
     width: 30%;
     margin-top: 2%;
+    margin-left: 15%;
     /* height: 30px; */
     border: 2px solid black;
     border-radius: 30px;
@@ -145,11 +153,24 @@ button[type="submit"]:hover
     font-size: 15px;
 }
 
+.sendbox{
+    width: 100%;
+    margin-top: 8%;
+}
+
 .send{
     display: flex;
     justify-content: center;
-    margin: 0 auto;
+    margin: 0%;
 }
 .signup1{
-    margin-left: 230px;
+    display: flex;
+    justify-content: center;
+    margin-top: 2%;
+}
+
+.signup2:hover{
+    background: transparent;
+    color: blue;
+    text-decoration: none;
 }
